SG.yml
AWSTemplateFormatVersion: 2010-09-09
Description: lecture10-SecurityGroup-template



Parameters:
  MyIP:
    Description: IP address allowed to access EC2
    Type: String
    Default: "60.147.36.53/32"

  EC2SGName:
    Type: String
    Default: "RaiseTech-EC2SG"

  RDSSGName: 
    Type: String
    Default: "RaiseTech-RDSSG"
    
  ALBSGName: 
    Type: String
    Default: "RaiseTech-ALBSG"


Resources:
  #EC2SG----------------------------------------------------------------------
  MyEC2SG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Ref EC2SGName
      VpcId: !ImportValue MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref MyIP
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref ALBSecurityGroup   #このセキュリティグループとの通信は許可する


  #RDSSG----------------------------------------------------------------------
  MyRDSSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Ref RDSSGName
      VpcId: !ImportValue MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref MyEC2SG


  #ALBSG----------------------------------------------------------------------
  MyALBSG:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      VpcId: !ImportValue MyVPC
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags: 
        - Key: Name
          Value: !Ref MyALBSG


Outputs:
　#output-------------------------------------------------------------------
  MyEC2SG:
    Value: !Ref MyEC2SG
    Export:
      Name: !Ref EC2SGName

  MyRDSSG:
    Value: !Ref MyRDSSG
    Export:
      Name: !Ref RDSSGName

      
  MyALBSG:
    Value: !Ref MyALBSG
    Export:
      Name: !Ref ALBSGName
